# Bedrock-Common

./: CMakeLists.txt
include/: common.h
include/common/: algorithm.h  interfaces.h  intrinsics.h  log.h  types_enums.h
src/common/: interfaces.cc  intrinsics.cc  log.cc
test/: is_intrinsic_useable.cc  log.cc
